ros/servo controller/ros2_ws/log/build_2024-06-03_11-10-16/webcam_streamer_package/stderr.log
  File "/home/ubuntu/ros2_ws/install/webcam_streamer_package/lib/python3.10/site-packages/webcam_streamer_package/webcam_streamer_node.py", line 25
    continue
    ^^^^^^^^
SyntaxError: expected 'except' or 'finally' block

